PROD-9756 - Remove unnecessary label and column alignment issue fix

--- a/src/js/admin/settings-2.0/styles/scss/screens/features/_notification-types.scss
+++ b/src/js/admin/settings-2.0/styles/scss/screens/features/_notification-types.scss
@@ -96,6 +96,7 @@
 		align-items: center;
 		gap: 24px;
 		flex-shrink: 0;
+		margin-left: auto;
 	}
 
 	&__sub-type {
